# Heart-Disease-Prediction

./: README.md
heart-disease-project/: pyproject.toml
heart-disease-project/heart_disease_app/: api.py  heart-disease-frontend.py  heart-disease-model.ipynb  heartDisease-umehabiba_Fakhira-batch1.pkl  scalar.pkl
